fixed Skill bars alignment and sizing.
made for large and mobile now.

--- a/assets/css/3-modules/containers.sass
+++ b/assets/css/3-modules/containers.sass
@@ -29,7 +29,7 @@
   margin: 0 25px
   //background-color: red
   
-@media (max-width: 700px)
+@media (max-width: 850px)
   .wrapper .flex
     display: block
     
@@ -51,3 +51,4 @@
   color: $clouds
   
 //----------END--------------- 
+
