--- a/assets/css/4-pages/about.sass
+++ b/assets/css/4-pages/about.sass
@@ -11,84 +11,11 @@
   
 .p-dark
   font-size: 16px
-  text-align: justify
-  margin: 20px 100px
+  text-align: center
+  margin: 0 100px
   color: $asphalt
   
   @media (max-width: 700px)
     margin: 0 10px
   
   
-
-// Skill bar styles -------------
-
-.skill-lockup
-  max-width: 300px
-  margin : 20px auto
-  @include clearfix
-
-    
-  .skillBar
-    width: 325px
-    float: left
-  
-  
-
-  .skillBar h4 
-    color: $asphalt
-    font-size: 16px
-    text-transform: none
-    font-weight: bold
-    margin-bottom: 1px
-  
-  
-  .skillContainer 
-    //width: 100%
-    //max-width: 350px
-    height: 15px
-    background: $asphalt
-    overflow: hidden
-    border-radius: 7px
-    margin: 0 0 10px 0
-  
-  
-  .skillValue 
-    height: 15px
-    float: left
-    background: $emerald
-
-
-.value-00  
-  width: 0
-
-.value-10 
-  width: 10%
-
-.value-20  
-  width: 20%
-
-.value-30 
-  width: 30%
-
-.value-40 
-  width: 40%
-
-.value-50 
-  width: 50%
-
-.value-60 
-  width: 60%
-
-.value-70 
-  width: 70%
-
-.value-80 
-  width: 80%
-
-.value-90 
-  width: 90%
-
-.value-100 
-  width: 100%
-  
-//------------END----------------
