--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -440,7 +440,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.2; }
 
 p {
-  margin: 0 0 20px 0; }
+  margin: 0 0 0 0; }
 
 em {
   font-style: italic; }
@@ -498,7 +498,7 @@ hr {
   max-width: 500px;
   margin: 0 25px; }
 
-@media (max-width: 700px) {
+@media (max-width: 850px) {
   .wrapper .flex {
     display: block; }
 
@@ -730,93 +730,46 @@ li a {
 
 .p-dark {
   font-size: 16px;
-  text-align: justify;
-  margin: 20px 100px;
+  text-align: center;
+  margin: 0 100px;
   color: #34495e; }
   @media (max-width: 700px) {
     .p-dark {
       margin: 0 10px; } }
 
-.skill-lockup {
-  max-width: 300px;
-  margin: 20px auto; }
-  .skill-lockup::after {
-    clear: both;
-    content: "";
-    display: table; }
-  .skill-lockup .skillBar {
-    width: 325px;
-    float: left; }
-  .skill-lockup .skillBar h4 {
-    color: #34495e;
-    font-size: 16px;
-    text-transform: none;
-    font-weight: bold;
-    margin-bottom: 1px; }
-  .skill-lockup .skillContainer {
-    height: 15px;
-    background: #34495e;
-    overflow: hidden;
-    border-radius: 7px;
-    margin: 0 0 10px 0; }
-  .skill-lockup .skillValue {
-    height: 15px;
-    float: left;
-    background: #2ecc71; }
-
-.value-00 {
-  width: 0; }
-
-.value-10 {
-  width: 10%; }
-
-.value-20 {
-  width: 20%; }
-
-.value-30 {
-  width: 30%; }
-
-.value-40 {
-  width: 40%; }
-
-.value-50 {
-  width: 50%; }
-
-.value-60 {
-  width: 60%; }
-
-.value-70 {
-  width: 70%; }
-
-.value-80 {
-  width: 80%; }
-
-.value-90 {
-  width: 90%; }
-
-.value-100 {
-  width: 100%; }
-
 #skills {
   background-color: #eef3f5; }
 
-.skill-lockup {
-  padding: 0 0 50px 0; }
+.skill-box {
+  margin: 50px auto; }
+  .skill-box::after {
+    clear: both;
+    content: "";
+    display: table; }
+  @media (max-width: 850px) {
+    .skill-box {
+      margin: auto auto; } }
 
 .skillBar {
-  width: 430px;
-  float: left; }
-  .skillBar .skillBar h4 {
+  margin-bottom: 20px; }
+  .skillBar h4 {
     color: #34495e;
     font-size: 14px;
     text-transform: none;
-    font-weight: bold; }
+    font-weight: bold;
+    margin-bottom: 1px;
+    padding: 0px; }
   .skillBar .skillContainer {
-    width: 100%;
+    width: 625px;
     height: 10px;
     background: #34495e;
-    border-radius: 3px;
-    margin: 0 5px0 10px 0; }
+    border-radius: 3px; }
+    @media (max-width: 1400px) {
+      .skillBar .skillContainer {
+        width: 450px; } }
+    @media (max-width: 1000px) {
+      .skillBar .skillContainer {
+        width: 380px; } }
 
 .skillValue {
   height: 10px;
